# hawktui

./: .gitignore  LICENSE  Makefile  pyproject.toml  readme.md
.github/workflows/: release.yml
hawktui/: __init__.py  build.py  hawktui.py  requirements.txt
